exports[`completed todo`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <li
      className="completed">
      <div
        className="view">
        <input
          checked={true}
          className="toggle"
          onChange={[Function]}
          type="checkbox" />
        <label
          onDoubleClick={[Function]}>
          My todo
        </label>
        <button
          className="destroy"
          onClick={[Function]} />
      </div>
    </li>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            ToDoItem
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            completed todo
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                TodoItem
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    todo
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            id
                          </span>
                          : 
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }>
                              0
                            </span>
                            }
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            text
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }>
                            \"
                            My todo
                            \"
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            completed
                          </span>
                          : 
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }>
                              true
                            </span>
                            }
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    editTodo
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          editTodo()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    deleteTodo
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          deleteTodo()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    completeTodo
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          completeTodo()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              TodoItem
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    completeTodo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    deleteTodo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    editTodo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    todo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`new todo`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <li
      className="">
      <div
        className="view">
        <input
          checked={false}
          className="toggle"
          onChange={[Function]}
          type="checkbox" />
        <label
          onDoubleClick={[Function]}>
          My todo
        </label>
        <button
          className="destroy"
          onClick={[Function]} />
      </div>
    </li>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            ToDoItem
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            new todo
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                TodoItem
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    todo
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            id
                          </span>
                          : 
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }>
                              0
                            </span>
                            }
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            text
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }>
                            \"
                            My todo
                            \"
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            completed
                          </span>
                          : 
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }>
                              false
                            </span>
                            }
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    editTodo
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          editTodo()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    deleteTodo
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          deleteTodo()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    completeTodo
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          completeTodo()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              TodoItem
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    completeTodo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    deleteTodo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    editTodo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    todo
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    yes
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
